core/Examples/Errors/loop.k
<code> loop <is> {'a laap};
<code> laap <is> {'a leep};
<code> leep <is> {'a loop};

main = {};